<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventActivity">

    <ToggleButton
        android:id="@+id/switchActive"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="182dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="182dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextBandName"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:ems="250"
        android:inputType="text"
        android:text="@string/lbl_event_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchActive" />

    <EditText
        android:id="@+id/editTextBandLink"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:ems="500"
        android:inputType="text"
        android:text="@string/lbl_event_band_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBandName" />

    <EditText
        android:id="@+id/editTextGenre"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:ems="500"
        android:inputType="text"
        android:text="@string/lbl_event_genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBandLink" />

    <EditText
        android:id="@+id/editTextDesc"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:ems="250"
        android:inputType="text"
        android:text="@string/lbl_event_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGenre" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:ems="50"
        android:inputType="date"
        android:text="@string/lbl_event_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDesc" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:ems="50"
        android:inputType="time"
        android:text="@string/lbl_event_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDesc" />

    <EditText
        android:id="@+id/editTextVenue"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:ems="250"
        android:inputType="text"
        android:text="@string/lbl_event_venue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <EditText
        android:id="@+id/editTextVenueAddress"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:ems="250"
        android:inputType="text"
        android:text="@string/lbl_event_venue_addr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextVenue" />

    <EditText
        android:id="@+id/editTextVenueCity"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:ems="250"
        android:inputType="textPostalAddress"
        android:text="@string/lbl_event_venue_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextVenueAddress" />

    <EditText
        android:id="@+id/editTextVenueState"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="11dp"
        android:ems="2"
        android:inputType="textPostalAddress"
        android:text="@string/lbl_event_venue_state"
        app:layout_constraintEnd_toStartOf="@+id/editTextVenueZip"
        app:layout_constraintTop_toBottomOf="@+id/editTextVenueAddress" />

    <EditText
        android:id="@+id/editTextVenueZip"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/lbl_event_venue_zip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextVenueAddress" />

    <EditText
        android:id="@+id/editTextVenueLink"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:ems="500"
        android:inputType="text"
        android:text="@string/lbl_event_venue_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextVenueZip" />

    <EditText
        android:id="@+id/editTextTickets"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:ems="250"
        android:inputType="numberDecimal"
        android:text="@string/lbl_event_tickets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextVenueLink" />

    <EditText
        android:id="@+id/editTextTicketsLink"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:ems="500"
        android:inputType="text"
        android:text="@string/lbl_event_tickets_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTickets" />

<!--    <EditText-->
<!--        android:id="@+id/editTextLogo"-->
<!--        android:layout_width="350dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginStart="30dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginEnd="30dp"-->
<!--        android:ems="250"-->
<!--        android:inputType="text"-->
<!--        android:text="@string/lbl_event_logo"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/editTextTicketsLink" />-->

    <EditText
        android:id="@+id/editTextLogoLink"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:ems="500"
        android:inputType="text"
        android:text="@string/lbl_event_logo_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTicketsLink" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogoLink" />

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_main_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_text_home" />

        <Button
            android:id="@+id/btn_main_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_text_event" />

        <Button
            android:id="@+id/btn_main_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_text_list" />

<!--        <Button-->
<!--            android:id="@+id/btn_main_map"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/btn_text_map" />-->

        <Button
            android:id="@+id/btn_main_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_text_settings" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>